--- a/styles/index.css
+++ b/styles/index.css
@@ -1131,7 +1131,7 @@
 .u-section-8 .u-image-1 {
   width: 376px;
   height: 376px;
-  background-image: url("images/1672069322339.jpg");
+  background-image: url("https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/pp.jpg");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-translate_y: 0px;
