--- a/styles/index.css
+++ b/styles/index.css
@@ -1035,7 +1035,7 @@
     margin-left: -25px;
   }
 } .u-section-7 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/DALLE2022-12-1123.09.53.png");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("https://raw.githubusercontent.com/menaca/menaca.github.io/refs/heads/main/images/bg.png");
   background-position: 50% 28.86%;
 }
 
